@@ -2347,6 +2347,11 @@ Tue Dec  9  8:11:36 2008  Brent Roman  <brent@mbari.org>
           this avoids segfaults if this scope_dup() triggers a gc pass
         
 
+Tue Dec  9 03:21:37 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* mkconfig.rb: fix for continued lines.  based on a patch from
+	  Marcus Rueckert <darix AT opensu.se> at [ruby-core:20420].
+
 Tue Nov 11 01:07:32 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* configure.in: fix SEGV on Mac OS X 10.5.3 with --enable-pthread.
